--- a/netbox/templates/ipam/vrf_edit.html
+++ b/netbox/templates/ipam/vrf_edit.html
@@ -16,6 +16,7 @@
         <div class="panel-body">
             {% render_field form.tenant_group %}
             {% render_field form.tenant %}
+            {% render_field form.device %}
         </div>
     </div>
     {% if form.custom_fields %}
