--- a/netbox/templates/ipam/vrf.html
+++ b/netbox/templates/ipam/vrf.html
@@ -61,10 +61,10 @@
                     <td>{{ vrf.rd }}</td>
                 </tr>
                 <tr>
-                    <td>Tenant</td>
+                    <td>Device</td>
                     <td>
-                        {% if vrf.tenant %}
-                            <a href="{{ vrf.tenant.get_absolute_url }}">{{ vrf.tenant }}</a>
+                        {% if vrf.device %}
+                            <a href="{{ vrf.device.get_absolute_url }}">{{ vrf.device }}</a>
                         {% else %}
                             <span class="text-muted">None</span>
                         {% endif %}
